--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,5 +23,7 @@ html
             = link_to 'DirectMessages', direct_messages_path
           = nav_list(controller.controller_name, "sent_messages") do
             = link_to 'SentMessages', sent_messages_path
+          = nav_list(controller.controller_name, "settings") do
+            = link_to 'Setting', edit_setting_path(1)
     .main-container
       = yield
