--- a/app/views/settings/_form.html.slim
+++ b/app/views/settings/_form.html.slim
@@ -2,6 +2,8 @@
 
   .form-inputs
     = f.input :unfollow_after_minutes
+    = f.input :twitter_consumer_key
+    = f.input :twitter_consumer_secret
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
